--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,6 @@ exclude = '''
     | \.venv
     | \.mypy_cache
     | \.pytest_cache
-    | \.vscode
-    | __pycache__
     | build
     | dist
     | \.eggs
@@ -22,7 +20,7 @@ profile = "black"
 multi_line_output = 3
 line_length = 100
 include_trailing_comma = true
-skip = [".git", ".venv", "__pycache__", ".mypy_cache", ".pytest_cache", ".vscode", "build", "dist"]
+skip = [".git", ".venv", "__pycache__", ".mypy_cache", ".pytest_cache", "build", "dist"]
 
 [tool.mypy]
 python_version = "3.8"
@@ -38,7 +36,6 @@ exclude = [
     '__pycache__/',
     '.mypy_cache/',
     '.pytest_cache/',
-    '.vscode/',
     'build/',
     'dist/',
 ]
@@ -65,7 +62,6 @@ ignore = [
     "__pycache__",
     ".mypy_cache",
     ".pytest_cache",
-    ".vscode",
     "build",
     "dist",
     "*.egg-info",
@@ -80,7 +76,6 @@ exclude = [
     "__pycache__",
     ".mypy_cache",
     ".pytest_cache",
-    ".vscode",
     "build",
     "dist",
     "*.egg-info",
