--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,45 @@
-*.pyc
+# Python
 __pycache__/
-.pytest_cache/
-.coverage
-.env
-.venv/
-*.log
-.DS_Store
-ALPHA_backup_*/
-.mypy_cache/
-htmlcov/
-*.egg-info/
-dist/
+*.py[cod]
+*$py.class
+*.so
+.Python
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+.env
+.venv
+env/
+venv/
+ENV/
+
+# IDE
 .idea/
-.vscode/ 
+.vscode/
+*.swp
+*.swo
+
+# Testing
+.coverage
+.pytest_cache/
+htmlcov/
+
+# Unity Project - ignore everything
+PRISM/PRISM_Visual_Files/
+
+# Misc
+.DS_Store
