--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,55 +1,77 @@
+[build-system]
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.mypy]
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = false
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+exclude = [
+    'tests',
+    'setup.py',
+    '.venv',
+    '__pycache__',
+    '.mypy_cache',
+    '.pytest_cache',
+    'build',
+    'dist',
+    'PRISM/PRISM_Visual_Files',
+    'PRISM/PRISM_Visual_Files/Library/PythonInstall'
+]
+
+[[tool.mypy.overrides]]
+module = ["UnityEngine", "clr"]
+ignore_missing_imports = true
+
 [tool.black]
 line-length = 100
 target-version = ['py38']
 include = '\.pyi?$'
 exclude = '''
-(
-    \.git
-    | \.venv
-    | \.mypy_cache
-    | \.pytest_cache
+/(
+    \.venv
     | build
     | dist
-    | \.eggs
-    | .*\.egg-info
-)
+    | __pycache__
+    | PRISM/PRISM_Visual_Files
+)/
 '''
 
 [tool.isort]
 profile = "black"
-multi_line_output = 3
 line_length = 100
+multi_line_output = 3
 include_trailing_comma = true
-skip = [".git", ".venv", "__pycache__", ".mypy_cache", ".pytest_cache", "build", "dist"]
-
-[tool.mypy]
-python_version = "3.8"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-ignore_missing_imports = true
-exclude = [
-    'tests/',
-    'setup.py',
-    '.venv/',
-    '__pycache__/',
-    '.mypy_cache/',
-    '.pytest_cache/',
-    'build/',
-    'dist/',
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+skip = [
+    '.venv',
+    'build',
+    'dist',
+    '__pycache__',
+    'PRISM/PRISM_Visual_Files'
 ]
 
 [tool.pylint.messages_control]
 disable = [
-    "C0111",  # missing-docstring
-    "C0103",  # invalid-name
-    "C0330",  # bad-continuation
-    "C0326",  # bad-whitespace
-    "W0511",  # fixme
-    "R0903",  # too-few-public-methods
-    "R0913",  # too-many-arguments
-    "W0621",  # redefined-outer-name
+    "C0111",
+    "C0103",
+    "C0330",
+    "C0326",
+    "W0511",
+    "R0903",
+    "R0913",
+    "W0621",
 ]
 
 [tool.pylint.format]
@@ -65,6 +87,7 @@ ignore = [
     "build",
     "dist",
     "*.egg-info",
+    "PRISM/PRISM_Visual_Files"
 ]
 
 [tool.flake8]
@@ -80,4 +103,12 @@ exclude = [
     "dist",
     "*.egg-info",
     "tests/*",
+    "PRISM/PRISM_Visual_Files"
 ]
+
+# VS Code / Pylance settings
+[tool.pylance]
+exclude = ["PRISM/PRISM_Visual_Files/**"]
+
+[tool.pyright]
+exclude = ["PRISM/PRISM_Visual_Files/**"]
